# MediaForge

./: .gitignore  CLAUDE.md  README.md  build.ps1  dev.ps1  index.html  package-lock.json  package.json  setup_python_dist.ps1  tailwind.config.js
.github/scripts/: bump-version.js  gen-notes.py
.github/workflows/: build.yml  release.yml
python_backend/: main.py  requirements.txt  rpc_handlers.py  server.py  watchdog.py
python_backend/core/: __init__.py  background_remover.py  image_resizer.py  video_processor.py
python_backend/utils/: __init__.py  gpu_manager.py  portable.py
scripts/: generate_icons.py
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/python/: ipc.rs  manager.rs  mod.rs
src/components/layout/: Header.tsx  LanguageSelector.tsx  MainLayout.tsx  Settings.tsx  Sidebar.tsx  ThemeToggle.tsx  index.ts
src/components/tools/: BackgroundRemover.tsx  FormatConverter.tsx  ImageResizer.tsx  ImageStitcher.tsx  ToolPlaceholder.tsx  VideoToFrames.tsx  VideoToGif.tsx  index.ts
src/components/ui/: ImagePreview.tsx  ResultActions.tsx  index.ts
src/hooks/: index.ts  useFileDrop.ts  usePython.ts  useTheme.ts
src/lib/: i18n.ts  python-rpc.ts  utils.ts
src/locales/: en.json  ja.json  zh-CN.json
